# Dedukti

./: Makefile
commands/: dkcheck.ml  dkdep.ml  dkpretty.ml  dune  main.ml
tests/: dedukti.ml  dedukti.mli  main.ml
tests/tezt/_regressions/tests/OK/: hott.dk_pretty.out  nsteps3.dk_dkcheck_ok.out
universo/checking/: checker.ml
universo/commands/: unif.ml  universo.ml
universo/common/: constraints.ml  dune  oracle.ml  unif.ml  universes.ml
universo/elaboration/: var.ml
universo/solving/: solver.ml  z3arith.ml  z3cfg.ml  z3syn.ml
