(executable
 (name main)
 (modules main dkcheck dkdep dkpretty config)
 (public_name dedukti)
 (package dedukti)
 (libraries cmdliner kernel parsers api))

(executable
 (name dktop)
 (public_name dktop)
 (modules dktop)
 (package dedukti)
 (libraries kernel parsers api))

(executable
 (name dkmeta)
 (public_name dkmeta)
 (modules dkmeta)
 (package dedukti)
 (libraries kernel parsers api))

(executable
 (name dkprune)
 (public_name dkprune)
 (modules dkprune)
 (package dedukti)
 (libraries kernel parsers api))
